// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CardProd > Snapshot: Debería mantener la estructura del componente con oferta 1`] = `
<a
  class="card-product"
  data-discover="true"
  href="/productos/2"
  role="link"
>
  <img
    alt="mouse"
    src="public/img/mouse.png"
  />
  <div
    class="card-content"
  >
    <h3
      class="card-titulo"
    >
      mouse
    </h3>
    <div
      class="card-precio"
    >
      <p>
        <span
          class="text-muted text-decoration-line-through"
        >
          $
          8.000
        </span>
        <br />
        <span
          class="fw-bold text-success"
        >
          $
          6.400
        </span>
      </p>
      <span
        class="badge bg-danger"
      >
        -
        20
        % OFF
      </span>
    </div>
    <p
      class="card-desc"
    >
      mouse ligero
    </p>
  </div>
  <button
    class="btn-agregar"
  >
    <i
      class="bi bi-cart-plus"
    />
     Agregar al Carrito
  </button>
</a>
`;

exports[`CardProd > Snapshot: Debería mantener la estructura del componente sin oferta 1`] = `
<a
  class="card-product"
  data-discover="true"
  href="/productos/1"
  role="link"
>
  <img
    alt="catan"
    src="/public/img/catan.png"
  />
  <div
    class="card-content"
  >
    <h3
      class="card-titulo"
    >
      catan
    </h3>
    <p
      class="card-precio"
    >
      $
      10.000
    </p>
    <p
      class="card-desc"
    >
      catan
    </p>
  </div>
  <button
    class="btn-agregar"
  >
    <i
      class="bi bi-cart-plus"
    />
     Agregar al Carrito
  </button>
</a>
`;
